@@ -1,3 +1,9 @@
+2021-01-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+        * coders/meta.c (ReadMETAImage): Fix double-free if blob buffer
+        was reallocated after being attached to blob.  Fixes oss-fuzz
+        29193 "Heap-double-free in MagickFree".
+
 2021-01-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
         * configure.ac: Updates to use recommended forms of AC_INIT and
